# mlops_e2e

./: .gitignore  DEMO_PLAN.md  DEMO_RUNBOOK.md  README.md  environment-setup.sql  pyproject.toml
infra/: create_gateway.sql  create_monitor.sql  generate_prod_data.py  setup_compute.sql
notebooks/: end-2-end-mlops-demo.ipynb
scripts/: dag.py  deploy_services.py  run_pipeline.py  simulate_traffic.py  submit_pipeline.py  submit_step.py
src/demo_functions/: __init__.py  demo_flow.py  plotting.py
src/pdm_pipeline/: __init__.py  common.py  evaluate.py  notify.py  prepare_data.py  train_v1.py  train_v2.py
